--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
 body {
     margin: 0;
 }
+
+::-webkit-scrollbar {
+    width: 0.3em;
+    overflow-y: hidden;
+    overflow: hidden;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: #046EE9;
+    border-radius: 16px;
+    height: 2px;
+    transition: all 0.4s ease-in-out;
+}
