--- a/src/pages/styles/tippytooltip.css
+++ b/src/pages/styles/tippytooltip.css
@@ -1,8 +1,9 @@
 .tippy-box[data-theme~='mytheme'] {
-    background-color: darkgrey;
+    background-color: darkgray;
     opacity: 0.8;
     color: #fff;
     font-weight: 200;
     border-radius: 3px;
     padding: 6px;
+    z-index: 100000000000;
 }
